# openclaw-discord-lifecycle-state

./: README.md  pyproject.toml
schemas/: channel-lifecycle-state.schema.json  lifecycle-command-result.schema.json
src/openclaw_lifecycle/: __init__.py  adapter.py  commands.py  context.py  discord_response.py  discord_runtime.py  mapping.py  pinned_status.py  project_mapping.py  project_state.py  registry_state.py  state.py  state_migration.py  status.py  workflow.py
tests/: test_auto_map_existing_channels.py  test_channel_context.py  test_channel_lookup_adapter.py  test_channel_registry_state.py  test_channel_slug_change_review.py  test_command_parsing.py  test_discord_response.py  test_discord_runtime.py  test_duplicate_project_mapping_report.py  test_lifecycle_command_workflow.py  test_lifecycle_status_reads.py  test_mapped_project_state.py  test_pinned_status_projection.py  test_project_mapping.py  test_project_mapping_command.py  test_state_migration.py  test_state_validation.py
